--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,13 @@
 spring:
   application:
     name: frontend
+  thymeleaf:
+    prefix: classpath:/templates/
+    suffix: .html
+
+server:
+  port: 9000
+
+logging:
+  level:
+    ROOT: INFO
